[package]
name = "gmssl"
version = "0.1.0"
authors = ["Jason Honor<jasonhonor@outlook.com>"]
license = "MIT/Apache-2.0"
description = "GmSSL bindings"
repository = "https://github.com/acovo/rust-gmssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2018"

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []

vendored = ['ffi/vendored']
bindgen = ['ffi/bindgen']
unstable_boringssl = ["ffi/unstable_boringssl"]
default = []

[dependencies]
bitflags = "1.0"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"

gmssl-macros = { version = "0.1" }
ffi = { package = "gmssl-sys", version = "0.1" }
#gmssl-sys = { version = "0.1" }

[dev-dependencies]
hex = "0.3"
